# stevecoin

./: .gitignore  BUGS.md  CLAUDE.md  README.md  client.py  index.py  miner.py  requirements.txt
lib/: block.py  blockchain.py  blockdb.py  errors.py  transaction.py
py/: README.md  client.py  index.py
py/lib/: block.py  blockdb.py  crypto.py  querylayer.py  transdb.py
rs/: Cargo.toml  README.md
rs/src/: block.rs  blockchain.rs  blockdb.rs  crypto.rs  errors.rs  lib.rs  querylayer.rs  transaction.rs  transdb.rs
rs/tests/: test_crypto.rs  test_decentralize.rs
unit/: test_crypto.py
